--- a/4_dp.ipynb
+++ b/4_dp.ipynb
@@ -402,6 +402,99 @@
     "\n",
     "このことから、正しく評価関数の値を得られたと考えられる。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0b970b8",
+   "metadata": {},
+   "source": [
+    "## 方策反復法\n",
+    "ここまで、ある方策に対して評価関数を求める方法を考えてきたが、最適方策を求めたい。\n",
+    "\n",
+    "まず、最適方策は以下の式で表すことができる。\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "\\mu_* (s) &= \\argmax_a q_* (s, a)\\\\\n",
+    "&= \\argmax_a \\sum_{s'} p(s'|s, a) \\{r(s, a, s') + \\gamma u_\\mu(s')\\}\n",
+    "\\end{align*}$$\n",
+    "\n",
+    "これは、状態$s$のときに行動価値関数を最大化する行動のインデックスを表す。\n",
+    "\n",
+    "ここで、以下のようにして方策を更新することを考える。\n",
+    "$$\\begin{align*}\n",
+    "\\mu '(s) &= \\argmax_a q_\\mu (s, a)\\\\\n",
+    "&= \\argmax_a \\sum_{s'} p(s'|s, a) \\{r(s, a, s') + \\gamma u_\\mu(s')\\}\n",
+    "\\end{align*}$$\n",
+    "\n",
+    "この式は現状の方策$\\mu(s)$における状態価値関数$u_\\mu(s)$を用いて、新たな方策$\\mu' (s)$を導く。\n",
+    "\n",
+    "すべての状態$s$について$\\mu(s)$と$\\mu'(s)$が同じであれば(方策が更新されなければ)、方策$\\mu(s)$が最適方策。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "233341e9",
+   "metadata": {},
+   "source": [
+    "### 実例を考える\n",
+    "先ほどと同じ$3 \\times 4$のグリッドマスの問題について考える。\n",
+    "\n",
+    "この問題は決定論的で、状態$s$と行動$a$に対して次の状態が一意に決まる。そのため、方策の更新式は以下のようにして表すことができる。\n",
+    "\n",
+    "$$\n",
+    "\\mu' (s) = \\argmax_a \\{r(s, a, s') + \\gamma u_\\mu (s')\\}\n",
+    "$$\n",
+    "\n",
+    "この式に従って方策を更新する`greedy_policy`関数を以下に定義する。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "836b8987",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def argmax(d: dict):\n",
+    "    \"\"\"\n",
+    "    辞書の最大値を持つキーを返す関数\n",
+    "    d: 辞書\n",
+    "    \"\"\"\n",
+    "    return max(d, key=d.get)\n",
+    "\n",
+    "def greedy_policy(V: defaultdict, env: GridWorld, gamma: float):\n",
+    "    \"\"\"\n",
+    "    V: 状態価値関数\n",
+    "    env: 環境\n",
+    "    gamma: 割引率\n",
+    "    \"\"\"\n",
+    "    pi = {}\n",
+    "    \n",
+    "    # 各地点について\n",
+    "    for state in env.states():\n",
+    "        action_values = {}\n",
+    "        \n",
+    "        # 各行動の価値を計算\n",
+    "        for action in env.actions():\n",
+    "            next_state = env.next_state(state, action)\n",
+    "            reward = env.reward(next_state)\n",
+    "            action_values[action] = reward + gamma * V[next_state]\n",
+    "\n",
+    "        # 価値が最大となる行動を選択\n",
+    "        max_action = argmax(action_values)\n",
+    "        action_probs = {a: 0 for a in env.actions()}\n",
+    "        action_probs[max_action] = 1.0\n",
+    "        pi[state] = action_probs\n",
+    "    return pi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb93b939",
+   "metadata": {},
+   "source": [
+    "評価関数"
+   ]
   }
  ],
  "metadata": {
